# prettycat

./: Cargo.toml  README.md  license.txt
src/: console.rs  main.rs  presets.rs  stream_colors.rs
src/console/: ansi_parsing.rs  console_color.rs  console_elem.rs
